[package]
name = "pipe"
version = "0.1.0"
authors = ["arcnmx"]

description = "Synchronous Read/Write memory pipe"
documentation = "http://arcnmx.github.io/pipe-rs/pipe/"
repository = "https://github.com/arcnmx/pipe-rs"
readme = "README.md"
keywords = ["pipe", "synchronous", "read", "write"]
license = "MIT"

[features]
bench = []
bidirectional = ["readwrite"]

[dependencies]
readwrite = {version = "0.1", optional = true}

[package.metadata.docs.rs]
features = ["bidirectional"]
