[package]
name = "pipe"
version = "0.2.0" # keep in sync with html_root_url
authors = ["arcnmx"]

description = "Synchronous Read/Write memory pipe"
documentation = "https://docs.rs/pipe/"
repository = "https://github.com/arcnmx/pipe-rs"
readme = "README.md"
keywords = ["pipe", "synchronous", "read", "write"]
license = "MIT"

[lib]
bench = false

[[bench]]
name = "pipe"
harness = false

[features]
bidirectional = ["readwrite"]
unstable-doc-cfg = []

[dependencies]
crossbeam-channel = "^0.3.8"
readwrite = { version = "^0.1.1", optional = true }

[dev-dependencies]
criterion = "^0.2.11"
os_pipe = "^0.8.1"

[package.metadata.docs.rs]
features = ["bidirectional", "unstable-doc-cfg"]
